# TengriBOT

./: .gitignore  Assignations.py  Ideol.py  Lg.py  Meme.py  README.md  TODO  TODO.md  TengriBOT.py  Translation.py  Utils.py  lgcode.txt  meme_config.txt  messages.py  pyproject.toml  requirements.txt
LgRoles/: Ideol.py  Lg.py
Meme/: Meme.py
Translation/: Translation.py
