[tool.poetry]
name = "dependancies"
version = "0.1.0"
description = ""
authors = ["Martin <martin.balfroid@student.unamur.be>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
