[tool.poetry]
name = "dependancies"
version = "0.1.0"
description = ""
authors = ["Martin <martin.balfroid@student.unamur.be>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
